[package]
name = "hangman-server"
version = "0.3.0"
authors = ["J/A <archer884@gmail.com>"]

[dependencies]
clap = { version = "*", features = ["unstable", "suggestions", "color"] }
clippy = "*"
iron = "*"
persistent = "*"
rand = "*"
router = "*"
serde = "*"
serde_json = "*"
serde_macros = "*"
stopwatch = "*"